# LoavyPlayer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs  main.rs  models.rs  state.rs
src-tauri/src/audio/: mod.rs
src-tauri/src/db/: mod.rs
src-tauri/src/fetchers/: cover_art_archive.rs  mod.rs  musicbrainz.rs
src-tauri/src/room/: mod.rs
src/components/: Cover.tsx  NowPlayingView.tsx  PlayerBar.tsx  Sidebar.tsx  VirtualSongList.tsx
src/lib/: api.ts  audioEngine.ts  format.ts  useAudio.ts
src/views/: AlbumsView.tsx  ArtistsView.tsx  PlaylistsView.tsx  RoomView.tsx  SettingsView.tsx  SongsView.tsx
