[package]
name = "loavy-player"
version = "0.1.0"
description = "A customizable local-first desktop music player."
authors = ["Loavy Player Contributors"]
edition = "2021"

[lib]
name = "loavy_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "loavy-player"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2.5.1", features = [] }

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
lofty = "0.21"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rfd = "0.15"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
tauri = { version = "2.9.1", features = ["protocol-asset"] }
tokio = { version = "1", features = ["io-util", "macros", "net", "rt-multi-thread", "sync"] }
walkdir = "2.5"
